fixed collapsed dropdown

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -335,6 +335,7 @@ hr.about-line {
 
 @media screen and (max-width: 767px) {
     .year {
+	padding-bottom: 8px;
         display: block;
     }
 }
